Fixed dark mode contrast errors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -527,6 +527,7 @@ section.card {
     height: 300px;
     width: 25rem;
     padding-bottom: 1rem;
+    flex-direction: row;
 }
 
 .card p,
@@ -559,7 +560,6 @@ section.item {
     display: flex;
     width: 100%;
     justify-content: center;
-    align-items: center;
 }
 
 section.item p,
@@ -567,6 +567,12 @@ section.item a {
     width: 25%;
 }
 
-section:nth-child(odd) {
+#list section:nth-child(odd) {
     background-color: var(--accent-color);
+}
+
+.dark-mode h2#title {
+    margin: 0;
+    padding: 2rem 0 1rem;
+    color: white;
 }
