--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -382,4 +382,8 @@
         display: flex;
         padding: 2rem 4rem;
     }
+
+    #cards {
+        display: flex;
+    }
 }
