--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -245,4 +245,8 @@
         display: flex;
         padding: 2rem 4rem;
     }
+
+    #cards {
+        display: flex;
+    }
 }
